# data-poisoning-canary-system

./: Dockerfile  README.md  SPEC.md  docker-compose.yaml  env.example  pyproject.toml
app/: main.py  worker.py
app/core/: settings.py
