[project]
name = "data-poisoning-canary-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]~=5.6.2",
    "fastapi~=0.128.0",
    "minio~=7.2.20",
    "pydantic-settings~=2.12.0",
    "python-dotenv~=1.2.1",
    "uvicorn~=0.40.0",
]
